Tiny spacing fix

--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,10 @@ h3:hover, h4:hover {
     transition: 0.5s;
 }
 
+.email-wrapper {
+    margin-top: 1em;
+}
+
 .email-wrapper h2 {
     color: white;
 }
